@@ -199,7 +199,7 @@ $td->runtest("remove page we don't have",
 show_ntests();
 # ----------
 $td->notify("--- Miscellaneous Tests ---");
-$n_tests += 72;
+$n_tests += 73;
 
 $td->runtest("qpdf version",
 	     {$td->COMMAND => "qpdf --version"},
@@ -553,6 +553,11 @@ $td->runtest("stream with indirect decode parms",
 $td->runtest("check file",
              {$td->FILE => "a.pdf"},
              {$td->FILE => "indirect-decode-parms-out.pdf"});
+
+$td->runtest("handle page no with contents",
+             {$td->COMMAND => "qpdf --show-pages page-no-content.pdf"},
+             {$td->FILE => "page-no-content.out", $td->EXIT_STATUS => 0},
+             $td->NORMALIZE_NEWLINES);
 
 show_ntests();
 # ----------
