@@ -1,0 +1,8 @@
+page 1: 3 0 R
+  content:
+    6 0 R
+page 2: 4 0 R
+  content:
+page 3: 5 0 R
+  content:
+    9 0 R
